--- a/debian/control
+++ b/debian/control
@@ -7,15 +7,27 @@ Homepage: http://github.com/jrl-umi3218/SpaceVecAlg
 Vcs-Git: git://github.com/jrl-umi3218/SpaceVecAlg -b debian
 Vcs-Browser: http://github.com/jrl-umi3218/SpaceVecAlg
 Build-Depends: debhelper (>= 9),
-               pkg-config,
-               cmake,
-               doxygen,
-               libboost-test-dev,
-               libboost-timer-dev,
-               libboost-system-dev,
-               libeigen3-dev (>= 3.2),
-               python-eigen,
-               python3-eigen
+ pkg-config,
+ cmake,
+ doxygen,
+ libboost-test-dev,
+ libboost-timer-dev,
+ libboost-system-dev,
+ libeigen3-dev (>= 3.2),
+ python-all,
+ python-dev,
+ python-nose,
+ python-numpy,
+ python-setuptools,
+ cython,
+ python3-all,
+ python3-dev,
+ python3-nose,
+ python3-numpy,
+ python3-setuptools,
+ cython3,
+ python-eigen,
+ python3-eigen
 
 Package: libspacevecalg-dev
 Section: libdevel
